--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,13 @@
 :host {
-	background-color: white;
 	display: block;
 	margin: auto;
 	width: 700px;
-	box-shadow: 1px 6px 5px 2px rgba(0, 0, 0, 0.42);
+}
+
+h1 {
+	font-weight: normal;
+}
+
+h1, jlm-top-nav, jlm-chapitre {
+
 }
