--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
 
 * {
-	padding: 0;
-	margin: 0;
+	// padding: 0;
+	// margin: 0;
 }
 
 body {
-	background-color: hsl(340, 82%, 59%);
+	// background-color: hsl(340, 82%, 59%);
+	background-color: hsl(0, 0%, 96%);
+}
+
+sup.eme {
+	vertical-align: text-bottom;
 }
