LICENCE : ajout du fichier; ajout d'un module contenant toutes les directives présentes dans les templates

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
-
-* {
-	// padding: 0;
-	// margin: 0;
-}
+// @import url('https://fonts.googleapis.com/css?family=Noto+Serif');
 
 body {
-	// background-color: hsl(340, 82%, 59%);
 	background-color: hsl(0, 0%, 96%);
 }
