--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,12 @@
 <h1>
-  {{title}}
+	{{title}}
 </h1>
 <jlm-top-nav></jlm-top-nav>
-<router-outlet></router-outlet>
+<div>
+	<main>
+		<router-outlet></router-outlet>
+	</main>
+	<aside>
+		<jlm-encart-filtres></jlm-encart-filtres>
+	</aside>
+</div>
