change des styles, ajoute du formatage au texte, ajoute une directive
change la version (17->18)

met à jour typescript et codelyzer

change les styles

corrige le problème des tirets, ajoute du formatage et des liens

ajoute des règles à codelyzer

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -21,9 +21,13 @@ div {
 	}
 
 	aside {
-		position: sticky;
-		margin-left: 10px;
-		top: 10px;
-		align-self: flex-start;
+		flex: .1 1 150px;
+		position: relative;
+	}
+}
+
+@media (min-width: 400px) and (max-width: 600px) {
+	:host {
+		width: 100%;
 	}
 }
