--- a/src/app/encart-filtres/encart-filtres.component.html
+++ b/src/app/encart-filtres/encart-filtres.component.html
@@ -1,5 +1,3 @@
-<span>encart-filtres works!</span>
-<form>
-	<input type="checkbox" id="fact-checking-checkbox">
-	<label for="fact-checking-checkbox">vérifié</label>
-</form>
+	<span jlmScrollTop>
+		haut de page
+	</span>
