ignore yarn.lock, change les préférences de formatage, ajoute des media queries ajoute un titre à l'application dans un environnement web

--- a/src/app/top-nav/top-nav.component.scss
+++ b/src/app/top-nav/top-nav.component.scss
@@ -17,16 +17,39 @@ li {
 	&.active-link {
 		color: firebrick;
 	}
+
+	a {
+		color: inherit;
+		display: block;
+		padding: .5em;
+		text-decoration: none;
+
+		&:hover {
+			background-color: lightgrey;
+			text-decoration: underline;
+		}
+
+		.chapitre-mot {
+
+		}
+	}
 }
 
-a {
-	color: inherit;
-	display: block;
-	padding: .5em;
-	text-decoration: none;
+@media (max-width: 800px) {
+	li {
+		&:not(.active-link) {
+			flex: 1 4 auto;
 
-	&:hover {
-		background-color: lightgrey;
-		text-decoration: underline;
+			.chapitre-mot {
+				display: none;
+			}
+		}
+		&.active-link {
+			flex: 4 1 auto;
+		}
 	}
+}
+
+@media (min-width: 800px) and (max-width: 1024) {
+
 }
