--- a/src/app/top-nav/top-nav.component.html
+++ b/src/app/top-nav/top-nav.component.html
@@ -1,25 +1,25 @@
 <nav>
 	<ul>
 		<li routerLinkActive="active-link">
-			<a [routerLink]="['chapitre', 1]">Chapitre 1</a>
+			<a [routerLink]="['chapitre', 1]"><span class="chapitre-mot">Chapitre </span><span class="numero">1</span></a>
 		</li>
 		<li routerLinkActive="active-link">
-			<a [routerLink]="['chapitre', 2]">Chapitre 2</a>
+			<a [routerLink]="['chapitre', 2]"><span class="chapitre-mot">Chapitre </span><span class="numero">2</span></a>
 		</li>
 		<li routerLinkActive="active-link">
-			<a [routerLink]="['chapitre', 3]">Chapitre 3</a>
+			<a [routerLink]="['chapitre', 3]"><span class="chapitre-mot">Chapitre </span><span class="numero">3</span></a>
 		</li>
 		<li routerLinkActive="active-link">
-			<a [routerLink]="['chapitre', 4]">Chapitre 4</a>
+			<a [routerLink]="['chapitre', 4]"><span class="chapitre-mot">Chapitre </span><span class="numero">4</span></a>
 		</li>
 		<li routerLinkActive="active-link">
-			<a [routerLink]="['chapitre', 5]">Chapitre 5</a>
+			<a [routerLink]="['chapitre', 5]"><span class="chapitre-mot">Chapitre </span><span class="numero">5</span></a>
 		</li>
 		<li routerLinkActive="active-link">
-			<a [routerLink]="['chapitre', 6]">Chapitre 6</a>
+			<a [routerLink]="['chapitre', 6]"><span class="chapitre-mot">Chapitre </span><span class="numero">6</span></a>
 		</li>
 		<li routerLinkActive="active-link">
-			<a [routerLink]="['chapitre', 7]">Chapitre 7</a>
+			<a [routerLink]="['chapitre', 7]"><span class="chapitre-mot">Chapitre </span><span class="numero">7</span></a>
 		</li>
 	</ul>
 </nav>
