--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,7 +12,7 @@ sup.eme {
 
 abbr {
 	text-decoration: underline dashed hsl(190, 100%, 36%);
-	text-decoration: underline dashed var(--theme-main-color);
+	text-decoration: underline dashed var(--theme-primary-color);
 	text-underline-position: under;
 
 	cursor: help;
