change l'affichage : + adapté aux mobiles

--- a/src/app/top-nav/top-nav.component.html
+++ b/src/app/top-nav/top-nav.component.html
@@ -2,7 +2,7 @@
 	<ul>
 		<li routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:
 true}">
-			<a [routerLink]="['/']"><span class="titre">L'avenir en commun</span></a>
+			<a [routerLink]="['/']"><span class="phi">φ</span><span class="titre">L'avenir en commun</span></a>
 		</li>
 		<li routerLinkActive="active-link">
 			<a [routerLink]="['chapitre', 1]">1</a>
