--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -24,7 +24,7 @@
 
 div {
 	display: flex;
-	flex-direction: row;
+	flex-direction: column;
 	position: relative;
 
 	main {
@@ -34,7 +34,6 @@ div {
 	}
 
 	aside {
-		flex: .1 1 150px;
 		position: relative;
 	}
 }
@@ -44,13 +43,13 @@ div {
 		div {
 			flex-direction: column;
 
-			main {
-				order: 2;
-			}
-
 			aside {
 				order: 1;
 				flex-basis: auto;
+			}
+
+			main {
+				order: 2;
 			}
 		}
 	}
