--- a/src/app/top-nav/top-nav.component.scss
+++ b/src/app/top-nav/top-nav.component.scss
@@ -12,6 +12,7 @@ ul {
 	display: flex;
 	list-style-type: none;
 	padding-left: 0;
+	margin: 0;
 
 	li {
 		// flex: 1;
@@ -34,7 +35,7 @@ ul {
 		a {
 			color: inherit;
 			display: block;
-			padding: .5em 1em;
+			padding: 1em 1em;
 			text-decoration: none;
 
 			&:hover {
@@ -49,7 +50,7 @@ ul {
 @media (max-width: $xs-max-width) {
 }
 
-@media (min-width: $xs-max-width) {
+@media (min-width: $sm-max-width) {
 	ul {
 		li {
 			.phi {
