--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,15 @@ body {
 	margin: 0;
 }
 
+h1, h2, h3, h4, h5, h6 {
+	-webkit-margin-before: 0;
+    -webkit-margin-after: 0;
+    -webkit-margin-start: 0;
+    -webkit-margin-end: 0;
+	margin-top: 0;
+	margin-bottom: 0;
+}
+
 sup.eme {
 	vertical-align: text-top;
 }
