--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -16,15 +16,16 @@
 	
 	display: flex;
 	flex-direction: column;
-	// width: 100%;
 	margin: auto;
-	// padding: 2em;
-	background-color: white;
 }
 
 div {
+	background-color: white;
+	box-shadow: 0 0 0 0 black;
 	display: flex;
 	flex-direction: column;
+	font-family: Lora;
+	margin: auto;
 	position: relative;
 
 	main {
@@ -42,13 +43,16 @@ div {
 	:host {
 		div {
 			flex-direction: row;
+			width: 960px;
+			justify-content: center;
 
 			main {
 				padding: 1em;
+				flex: 1 1 700px;
 			}
 
 			aside {
-				flex-basis: auto;
+				flex: 1 1 260px;
 			}
 		}
 	}
