--- a/src/app/top-nav/top-nav.component.scss
+++ b/src/app/top-nav/top-nav.component.scss
@@ -4,8 +4,9 @@
 	display: block;
 	position: sticky;
 	top: 0px;
-	z-index: 1;
+	z-index: 2;
 	background-color: var(--theme-primary-color);
+	box-shadow: 0 0px 9px 1px hsla(0, 0%, 0%, 0.6);
 }
 
 ul {
@@ -13,19 +14,23 @@ ul {
 	list-style-type: none;
 	padding-left: 0;
 	margin: 0;
+	height: 50px;
 
 	li {
-		// flex: 1;
-		text-align: center;
 		color: white;
+		display: flex;
+
+
+		&.phi {
+			a .phi {
+				font-size: 1.5em;
+				transform: translateY(-4px);
+			}
+		}
 
 		&.active-link {
 			color: black;
 			text-decoration: underline;
-		}
-
-		.phi {
-			// display: inherit;
 		}
 
 		.titre {
@@ -34,13 +39,17 @@ ul {
 
 		a {
 			color: inherit;
-			display: block;
-			padding: 1em 1em;
+			display: flex;
+			padding: 0 1em;
 			text-decoration: none;
 
 			&:hover {
 				background-color: hsla(0%, 0%, 20, .2);
 				text-decoration: underline;
+			}
+
+			.numero {
+				margin: auto;
 			}
 		}
 	}
