--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,10 +13,11 @@ h1, h2, h3, h4, h5, h6 {
     -webkit-margin-end: 0;
 	margin-top: 0;
 	margin-bottom: 0;
+	font-size: 1em;
 }
 
 sup.eme {
-	vertical-align: text-top;
+	line-height: 1em;
 }
 
 abbr {
