utilise @angular/material, ajoute un thème

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
-<jlm-top-nav></jlm-top-nav>
+<md-toolbar color="primary">
+  <span>L'avenir en commun</span>
+</md-toolbar>
 <div>
 	<aside>
+		<jlm-top-nav></jlm-top-nav>
 		<jlm-encart-filtres></jlm-encart-filtres>
 	</aside>
 	<main>
