--- a/src/app/font-size/font-size.component.html
+++ b/src/app/font-size/font-size.component.html
@@ -1,5 +1,3 @@
-<form>
-  <button md-icon-button (click)="increment()">A+</button>
-  <button md-icon-button (click)="decrement()">A-</button>
-  <button md-icon-button (click)="reset()"><md-icon>refresh</md-icon></button>
-</form>
+<button md-icon-button color="primary" (click)="increment()">A+</button>
+<button md-icon-button color="accent" (click)="decrement()">A-</button>
+<button md-icon-button color="warn" (click)="reset()"><md-icon>refresh</md-icon></button>
