--- a/src/app/top-nav/top-nav.component.html
+++ b/src/app/top-nav/top-nav.component.html
@@ -1,9 +1,9 @@
 <nav role="navigation">
 	<ul>
-		<li span class="phi" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:
+		<!--<li span class="phi" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:
 true}">
 			<a [routerLink]="['/']"><span class="phi numero">φ</span><span class="titre numero">L'avenir en commun</span></a>
-		</li>
+		</li>-->
 		<li routerLinkActive="active-link">
 			<a [routerLink]="['chapitre', 1]"><span class="numero">1</span></a>
 		</li>
