--- a/src/app/top-nav/top-nav.component.scss
+++ b/src/app/top-nav/top-nav.component.scss
@@ -5,8 +5,8 @@
 	position: sticky;
 	top: 0px;
 	z-index: 2;
-	background-color: var(--theme-primary-color);
-	box-shadow: 0 0px 9px 1px hsla(0, 0%, 0%, 0.6);
+	// background-color: var(--theme-primary-color);
+	// box-shadow: 0 0px 9px 1px hsla(0, 0%, 0%, 0.6);
 }
 
 ul {
@@ -17,7 +17,7 @@ ul {
 	height: 50px;
 
 	li {
-		color: white;
+		// color: white;
 		display: flex;
 
 
