--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -17,6 +17,7 @@
 	display: flex;
 	flex-direction: column;
 	margin: auto;
+	min-height: 100vh;
 }
 
 div {
@@ -25,7 +26,8 @@ div {
 	display: flex;
 	flex-direction: column;
 	font-family: Lora;
-	margin: auto;
+	margin-left: auto;
+	margin-right: auto;
 	position: relative;
 
 	main {
