--- a/src/app/font-size/font-size.component.html
+++ b/src/app/font-size/font-size.component.html
@@ -1,3 +1,3 @@
-<button md-icon-button color="primary" (click)="increment()">A+</button>
-<button md-icon-button color="accent" (click)="decrement()">A-</button>
-<button md-icon-button color="warn" (click)="reset()"><md-icon>refresh</md-icon></button>
+<button md-icon-button (pointerup)="increment()">A+</button>
+<button md-icon-button (pointerup)="decrement()">A-</button>
+<button md-icon-button (pointerup)="reset()"><md-icon>refresh</md-icon></button>
