--- a/src/app/encart-filtres/encart-filtres.component.scss
+++ b/src/app/encart-filtres/encart-filtres.component.scss
@@ -1,6 +1,7 @@
+@import '../../form-factors.scss';
+
 :host {
 	display: block;
-	border-right: 1px dashed black;
 }
 
 [jlmScrollTop] {
@@ -12,5 +13,11 @@
 	&:active {
 		color: hsl(190, 100%, 36%);
 		color: var(--theme-primary-color);
+	}
+}
+
+@media (min-width: $sm-max-width) {
+	:host {
+		border-right: 1px dashed black;
 	}
 }
