ajoute le menu de navigation général du site

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 </md-toolbar>
 <md-sidenav-layout>
 	<md-sidenav #nav>
-		<span>coucou</span>
+		<jlm-app-navigation></jlm-app-navigation>
 	</md-sidenav>
 	<div>
 		<aside>
