--- a/src/app/app-navigation/app-navigation.component.html
+++ b/src/app/app-navigation/app-navigation.component.html
@@ -1,5 +1,17 @@
-<md-list>
-   <a md-list-item [routerLink]="['chapitre', 1]">Pepper</a>
-   <a md-list-item [routerLink]="['chapitre', 1]">Salt</a>
-   <a md-list-item [routerLink]="['chapitre', 1]">Paprika</a>
-</md-list>
+<nav>
+    <ul>
+        <li>
+            <a [routerLink]="['chapitre', 1]">Pepper</a>
+        </li>
+        <li>
+
+        </li>
+            <a [routerLink]="['chapitre', 1]">Pepper</a>
+        <li>
+
+        </li>
+        <li>
+
+        </li>
+    </ul>
+</nav>
