--- a/src/app/font-size/font-size.component.html
+++ b/src/app/font-size/font-size.component.html
@@ -1,3 +1,3 @@
-<button md-icon-button (click)="increment()">A+</button>
-<button md-icon-button (click)="decrement()">A-</button>
-<button md-icon-button (click)="reset()"><md-icon>refresh</md-icon></button>
+<button md-icon-button class="increment" (click)="increment()">A+</button>
+<button md-icon-button class="decrement" (click)="decrement()">A-</button>
+<button md-icon-button class="reset" (click)="reset()"><md-icon>refresh</md-icon></button>
