ajoute des dépendances nécessaires à la compilation ahead-of-time

--- a/src/app/app-navigation/app-navigation.component.html
+++ b/src/app/app-navigation/app-navigation.component.html
@@ -1,7 +1,7 @@
 <nav>
     <ul>
         <li>
-            <a [routerLink]="['chapitre', 1]">Pepper</a>
+            <a [routerLink]="['chapitre', 1]">Le programme</a>
         </li>
         <li>
 
