crée le module chapitre crée le module Chapitre déplace ChapitreNavigationComponent dans le module Chapitre 	renommé :         src/app/chapitre-navigation/chapitre-navigation.component.html -> src/app/chapitre/chapitre-navigation/chapitre-navigation.component.html 	renommé :         src/app/chapitre-navigation/chapitre-navigation.component.scss -> src/app/chapitre/chapitre-navigation/chapitre-navigation.component.scss 	renommé :         src/app/chapitre-navigation/chapitre-navigation.component.spec.ts -> src/app/chapitre/chapitre-navigation/chapitre-navigation.component.spec.ts 	renommé :         src/app/chapitre-navigation/chapitre-navigation.component.ts -> src/app/chapitre/chapitre-navigation/chapitre-navigation.component.ts renomme ChapitreComponent en ChapitrePageComponent 	copié :           src/app/chapitre/chapitre.component.html -> src/app/chapitre/chapitre-page/chapitre-page.component.html 	copié :           src/app/chapitre/chapitre.component.scss -> src/app/chapitre/chapitre-page/chapitre-page.component.scss 	copié :           src/app/chapitre/chapitre.component.spec.ts -> src/app/chapitre/chapitre-page/chapitre-page.component.spec.ts 	copié :           src/app/chapitre/chapitre.component.ts -> src/app/chapitre/chapitre-page/chapitre-page.component.ts ChapitreComponent désigne désormais le composant qui affichera la page d'accueil des chapitres que l'on trouvera à l'URL /chapitres 	modifié :         src/app/chapitre/chapitre.component.html 	modifié :         src/app/chapitre/chapitre.component.scss 	modifié :         src/app/chapitre/chapitre.component.spec.ts 	modifié :         src/app/chapitre/chapitre.component.ts

--- a/src/app/app-navigation/app-navigation.component.html
+++ b/src/app/app-navigation/app-navigation.component.html
@@ -1,12 +1,11 @@
 <nav>
     <ul>
         <li>
-            <a [routerLink]="['chapitre', 1]">Le programme</a>
+            <a [routerLink]="['chapitres', 1]">Le programme</a>
         </li>
         <li>
-
+            <a [routerLink]="['chapitres', 1]">Pepper</a>
         </li>
-            <a [routerLink]="['chapitre', 1]">Pepper</a>
         <li>
 
         </li>
