crée CommonModule, change le routage
Crée CommonModule, dans lequel sont désormais déclarés :
- FontSizeComponent
- ScrollTopDirective

AppComponent n'affiche plus que AppLayoutComponent qui a désormais
la responsabilité d'afficher la mise en page générale de l'application.

Le routage est changé : on peut router en deux dimensions !!!
AppLayoutComponent comprend donc maintenant deux RouterOutlet :
le premier n'a pas de nom et on inserera dedans les divers chapitres
le second se nomme "encart" et il servira de menu contextuel, affiché
sur la goutière de gauche, on mettra dedans des infos contextuelles
ou des liens vers d'autres articles.
- '' affiche HomeComponent
- 'chapitres' affiche une petite page d'accueil sympa qui affiche
des liens vers les divers chapitres
- 'chapitres/:chapitreId' affiche le chapitre dont l'id correspond
et insère dans l'outlet "encart" le composant nommé EncartFiltresComponent

--- a/src/app/app-navigation/app-navigation.component.html
+++ b/src/app/app-navigation/app-navigation.component.html
@@ -1,10 +1,10 @@
 <nav>
     <ul>
         <li>
-            <a [routerLink]="['chapitres', 1]">Le programme</a>
+            <a [routerLink]="['/chapitres']">Le programme</a>
         </li>
         <li>
-            <a [routerLink]="['chapitres', 1]">Pepper</a>
+            <a [routerLink]="['/chapitres', 1]">Pepper</a>
         </li>
         <li>
 
