--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,1 @@
-<md-toolbar color="primary">
-	<button md-icon-button (click)="toggleSidenav()"><md-icon>menu</md-icon></button>
-  <span>L'avenir en commun</span>
-</md-toolbar>
-<md-sidenav-layout>
-	<md-sidenav #nav>
-		<jlm-app-navigation></jlm-app-navigation>
-	</md-sidenav>
-	<div>
-		<aside>
-			<jlm-encart-filtres></jlm-encart-filtres>
-		</aside>
-		<main>
-			<router-outlet></router-outlet>
-		</main>
-	</div>
-</md-sidenav-layout>
+<jlm-app-layout></jlm-app-layout>
