prépare des tests pour quelques composants

--- a/src/app/common/font-size/font-size.component.html
+++ b/src/app/common/font-size/font-size.component.html
@@ -1,3 +1,2 @@
-<button md-icon-button class="increment" (click)="increment()">A+</button>
-<button md-icon-button class="decrement" (click)="decrement()">A-</button>
-<button md-icon-button class="reset" (click)="reset()"><md-icon>refresh</md-icon></button>
+<button class="increment" (click)="increment()">A+</button>
+<button class="decrement" (click)="decrement()">A-</button>
