--- a/src/app/shared/font-size/font-size.component.scss
+++ b/src/app/shared/font-size/font-size.component.scss
@@ -1,5 +1,5 @@
 :host {
-    display: block;
+    display: flex;
 }
 
 [md-icon-button]:not(:last-of-type) {
@@ -7,7 +7,8 @@
 }
 
 button {
-    background-color: hsl(34, 57%, 70%);
+    background-color: transparent;
+    margin: .2em;
     border: none;
     cursor: pointer;
     font-size: 14px;
@@ -17,5 +18,13 @@ button {
 
     &:focus {
         outline: none;
+    }
+
+    &.increment {
+        font-size: 16px;
+    }
+
+    &.decrement {
+        font-size: 12px;
     }
 }
