--- a/src/app/app-layout/app-layout.component.html
+++ b/src/app/app-layout/app-layout.component.html
@@ -1,6 +1,6 @@
 <md-toolbar color="primary">
 	<button md-icon-button (click)="toggleSidenav()"><md-icon>menu</md-icon></button>
-  <span>L'avenir en commun</span>
+  <a [routerLink]="['/']">L'avenir en commun</a>
 </md-toolbar>
 <md-sidenav-layout>
 	<md-sidenav #nav>
