--- a/src/app/app-layout/app-layout.component.scss
+++ b/src/app/app-layout/app-layout.component.scss
@@ -7,6 +7,11 @@
 	flex: 1;
 }
 
+*, /deep/ * {
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
 md-toolbar {
 	a {
 		text-decoration: none;
