--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,4 +1,5 @@
 <article>
   <h2>Page introuvable</h2>
   <p>La page que vous avez demandée est introuvable.</p>
+  <a routerLink="/">Retour à l'accueil</a>
 </article>
