--- a/src/app/app-navigation/app-navigation.component.html
+++ b/src/app/app-navigation/app-navigation.component.html
@@ -4,7 +4,7 @@
             <a [routerLink]="['/chapitres']">Le programme</a>
         </li>
         <li>
-            <a [routerLink]="['/studio']">Pepper</a>
+            <a [routerLink]="['/studio']">Vidéomaton</a>
         </li>
     </ul>
 </nav>
