Studio fonctionne et enregistre bien la vidéo, sous Chrome uniquement pour l'instant

--- a/src/app/shared/font-size/font-size.component.scss
+++ b/src/app/shared/font-size/font-size.component.scss
@@ -13,7 +13,9 @@ button {
     cursor: pointer;
     font-size: 14px;
     padding: 4px 12px;
-    font-family: monospace;
+    /*font-family: Lora;
+    font-family: 'Gloria Hallelujah', cursive;*/
+
     border-radius: 2px;
 
     &:focus {
