fait la distinction entre composants et containers

--- a/src/app/containers/app-layout/app-layout.component.scss
+++ b/src/app/containers/app-layout/app-layout.component.scss
@@ -1,5 +1,5 @@
-@import '../../form-factors.scss';
-@import '../../colors.scss';
+@import '../../../form-factors.scss';
+@import '../../../colors.scss';
 
 :host {
 	display: flex;
