--- a/src/app/containers/home/home.component.html
+++ b/src/app/containers/home/home.component.html
@@ -5,5 +5,9 @@
 			J'ajouterai des contenus pour rendre le tout un peu dynamique. Des articles de journaux,
 			des vidéos, etc...
 		</p>
+		<p>
+			<a [routerLink]="['programme']">lien vers le programme</a><br>
+			<a [routerLink]="['studio']">lien vers le studio</a><br>
+		</p>
 	</div>
 </article>
