ajuste la largeur des vidéos quand la webcam a une bonne résolution

--- a/src/app/containers/app-navigation/app-navigation.component.html
+++ b/src/app/containers/app-navigation/app-navigation.component.html
@@ -1,7 +1,7 @@
 <nav>
     <ul>
         <li>
-            <a [routerLink]="['/chapitres']">Le programme</a>
+            <a [routerLink]="['/programme']">Le programme</a>
         </li>
         <li>
             <a [routerLink]="['/studio']">Vidéomaton</a>
