utilise MdIcons pour les boutons start et resume

--- a/src/app/studio/components/media-recorder/media-recorder.component.html
+++ b/src/app/studio/components/media-recorder/media-recorder.component.html
@@ -1,4 +1,4 @@
-<button *ngIf="canStart" class="start-button" md-icon-button (click)="start()">start</button>
+<button *ngIf="canStart" class="start-button" md-icon-button (click)="start()"><md-icon>fiber_manual_record</md-icon></button>
 <button *ngIf="canPause" class="pause-button" md-icon-button (click)="pause()"><md-icon>pause</md-icon></button>
-<button *ngIf="canResume" class="resume-button" md-icon-button (click)="resume()">resume</button>
+<button *ngIf="canResume" class="resume-button" md-icon-button (click)="resume()"><md-icon>fiber_manual_record</md-icon></button>
 <button *ngIf="canStop" class="stop-button" md-icon-button (click)="stop()"><md-icon>stop</md-icon></button>
